Fetch to git api

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: linear-gradient(#8b9da9, #fff6e4);
+  box-shadow: inset 0 0 100px hsla(0,0%,0%,.3);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
